# open-sar-orbits

./: .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml
.github/workflows/: ci.yml  pages.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  celestrak.py  config.py  db.py  export_static.py  geometry.py  main.py  omm.py  passes.py  registry.py  schema.sql  schemas.py
backend/app/routers/: metadata.py  orbits.py  passes.py  satellites.py
backend/data/: registry_seed.json
backend/tests/: conftest.py  test_api.py  test_celestrak.py  test_export_static.py  test_geometry.py  test_omm.py  test_passes.py  test_registry.py
backend/tests/fixtures/: omm_malformed.json  omm_radar_sample.json
docs/: api.md  architecture.md  data-sources.md  limitations.md  methodology.md  registry-guide.md
docs/screenshots/: README.md
frontend/: .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/api/: client.ts
frontend/src/components/: ClockControls.tsx  Console.tsx  Coordbar.tsx  Disclaimer.tsx  GlobeView.tsx  LeftPanel.tsx  Legend.tsx  RightPanel.tsx  TopBar.tsx  globeBridge.ts
frontend/src/hooks/: useAppData.ts
frontend/src/lib/: constellations.ts  filtering.ts  format.ts  groundtrack.ts  omm.ts  propagation.ts
frontend/src/store/: appStore.ts
frontend/src/styles/: console.css
frontend/src/test/: constellations.test.ts  filtering.test.ts  fixtures.ts  groundtrack.test.ts  (+2 more)
(+3 files in other folders)
