[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "open-sar-orbits-backend"
version = "0.1.0"
description = "Backend API for Open SAR Orbits: CelesTrak OMM caching, curated SAR registry, AOI pass prediction"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Pavan Muguda Sanjeevamurthy" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "sgp4>=2.23",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.9",
]

[tool.setuptools]
packages = ["app", "app.routers"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# Optional[X] stays: FastAPI evaluates annotations at runtime, and `X | None`
# strings break under get_type_hints() on Python 3.9.
ignore = ["UP007", "UP045"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_unused_ignores = false
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["sgp4.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
